src/objects/Parent_OBJ1__c.object
<CustomObject>
    <fields>
        <fullName>AC12_LOOKUP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AC12</label>
        <referenceTo>AC12__c</referenceTo>
        <relationshipLabel>Parent_OBJ1s</relationshipLabel>
        <relationshipName>Parent_OBJ1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>package_org3__AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ataat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nc1</label>
        <referenceTo>NC1__c</referenceTo>
        <relationshipLabel>Parent_OBJ1s</relationshipLabel>
        <relationshipName>Parent_OBJ1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Parent OBJ1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent OBJ1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent_OBJ1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rule_1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( $Organization.Name )</errorConditionFormula>
        <errorMessage>fgdfsg</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_2</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( $Profile.Name )</errorConditionFormula>
        <errorMessage>sdfa</errorMessage>
    </validationRules>
</CustomObject>